--- a/src/components/Film/Film.module.css
+++ b/src/components/Film/Film.module.css
@@ -1,36 +1,80 @@
-.filmBox {
-    box-sizing: border-box;
-    width: 18%;
-    height: 23%;
+.infoBox {
     display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+    width: calc(100% - 20px);
+    height: 100%;
+    justify-content: space-between;
     align-items: center;
-    background: var(--background-secondary);
-    border-radius: 15px;
-}
-.filmBox:hover {
-    position: relative;
-    width: 270px;
-    height: 490px;
-    transition-duration: 0.6s,0.6s;
+    color: white;
+    flex-direction: column;
+    position: absolute;
+    font-size: 24px;
+    padding: 0 10px;
 }
 
-.infoBox {
-    box-sizing: border-box;
-    display: flex;
-    width: 90%;
-    height: 20%;
-    justify-content: center;
-    align-items: center;
-    color: var(--text-primary);
-    flex-direction: column;
-    margin: 0 0 40px 0;
+.infoBox>span {
+    margin-bottom: 20px;
+}
+
+.infoBox>span path {
+    color: white;
 }
 
 img {
     width: 100%;
-    height: 70%;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+    height: 100%;
+    object-fit: cover;
+}
+
+.imageContainer {
+    width: 100%;
+    height: 100%;
+}
+
+.flipCard {
+    background-color: transparent;
+    width: 25%;
+    height: 500px;
+    perspective: 1000px;
+    margin-bottom: 45px;
+
+}
+
+.flipCardInner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 1s;
+    transform-style: preserve-3d;
+    box-shadow: var(--box-shadow);
+    border-radius: 15px;
+    cursor: pointer;
+
+
+}
+
+.flipCard:hover .flipCardInner {
+    transform: rotateY(180deg);
+}
+
+.flipCardFront,
+.flipCardBack {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 15px;
+    overflow: hidden;
+}
+
+.flipCardFront {
+    background-color: #bbb;
+    color: black;
+}
+
+.flipCardBack {
+    background-color: #000000da;
+    color: white;
+    transform: rotateY(180deg);
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
 }
