--- a/src/components/Films/Films.module.css
+++ b/src/components/Films/Films.module.css
@@ -1,22 +1,3 @@
-.MainBox {
-    width: 100%;
-    height: 250vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-image: var(--background-image);
-    color: wheat;
-}
-
-.filmsBox {
-    margin-top: 10px;
-    width: 70%;
-    height: 85%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: column;
-}
 .pageDiv {
     background: silver;
     width: 50%;
@@ -26,14 +7,17 @@
     align-items: center;
     border-radius: 15px;
     border: 2px solid black;
-
+    margin: 0 auto;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%)
 }
+
 .films {
     width: 100%;
-    height: 97%;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
     align-items: center;
 }
-
