--- a/src/components/Film/Film.module.css
+++ b/src/components/Film/Film.module.css
@@ -16,7 +16,7 @@
     transition-duration: 0.6s,0.6s;
 }
 
-.infoBox {
+.infoBox22 {
     box-sizing: border-box;
     display: flex;
     width: 90%;
